--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ scipy
 Pillow
 cython
 matplotlib
-scikit-image
-tensorflow>=1.3.0
-keras>=2.0.8
+scikit-image==0.16.2
+tensorflow==1.15.0
+keras==2.2.4
 opencv-python
-h5py
+h5py==2.8.0
 imgaug
 IPython[all]
